[package]
name = "altos_rust"
version = "0.1.0"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies.bump_allocator]
path = "libs/heap/bump_allocator"

[target.cortex-m0.dependencies]
alloc = { path = "libs/alloc" }
collections = { path = "libs/collections" }

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = 2
panic = "abort"

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "unwind"

[workspace]
