[package]
name = "altos_rust"
version = "0.1.0"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bump_allocator = { path = "libs/heap/bump_allocator" }
arm = { path = "libs/arm" }

[target.cortex-m0.dependencies]
alloc = { path = "libs/alloc" }
collections = { path = "libs/collections" }

[[test]]
name = "arm"
path = "libs/arm/src/lib.rs"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
lto = false
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "unwind"

[workspace]
