[package]
name = "altos_rust"
version = "0.1.0"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]

[lib]
crate-type = ["staticlib"]
test = false

[target.cortex-m0.dependencies]
cortex_m0 = { path = "port/cortex-m0" }

[[test]]
name = "altos_core"
path = "altos-core/src/lib.rs"

[[test]]
name = "arm"
path = "port/cortex-m0/libs/arm/src/lib.rs"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
lto = false
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "unwind"

[workspace]
